--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,22 @@
 
 /* Your CSS Code here. */
+#btn {
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  border: none;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size:   
+ 16px;
+  cursor: pointer;
+}
+
+#btn:hover {
+  background-color:   
+ yellow;
+  color: black;
+  border-radius: 30px;
+}
